Continued work on small logo/header. Hovering anywhere on the header now correctly changes the logo and menu text.

--- a/css/less/style.less
+++ b/css/less/style.less
@@ -57,7 +57,7 @@ body {
 
    header {
       background: #fff;
-      min-height: 55px;
+      height: 61px;
       min-width: 100%;
       z-index: 1000;
       position: fixed;
@@ -69,6 +69,10 @@ body {
          margin: 0 auto;
          width: 80%;
          //max-width: 1150px;
+
+         .mobile-logo{
+            display: none;
+         }
 
          .logo {
             position: relative;
@@ -254,33 +258,48 @@ body.dark {
 @media (min-width : 320px) and (max-width : 767px) {
    body {
       header {
-         height: 30px;
+         height: 47px;
+
          .headerContainer {
             width: 100%;
-            margin-left: 6px;
-
+            text-align: center;
+               
             .logo
             {
-               width: 25px;
-               height: 25px;
-               background: url("../images/logo-black.png") center no-repeat;
-            }
-
-            nav ul {
                display: none;
             }
-         }
-
-         .mobileMenu
-         {
-            display: inline-block;
-            color: @darkHeaderText;
-            font-size: 30px;
-
-            &:hover
+            .mobile-logo
             {
-               color: @darkHeaderHover;
+               display: inline-block;
+               position: fixed;
+               left: 5px;
+               top: 4px;
+               width: 38px;
+               height: 38px;
+               background: url("../images/mobile/logo-teal-small.png") center no-repeat;
             }
+            .mobileMenu {
+               display: block;
+               width: 100%;
+               color: @darkHeaderText;
+               font-size: 30px;
+               font-weight: bold;
+               &:hover
+               {
+                  color: @darkHeaderHover;
+                  cursor: pointer;
+               }
+            }
+
+            nav {
+               width: 100%;
+               margin-top: 4px;
+               float: none;
+               ul {
+                  display: none;
+               }
+            }
+
          }
       }
    }
@@ -289,16 +308,14 @@ body.dark {
    body.dark
    {
       header {
-         .headerContainer {
-            .logo
-            {
-               background: url("../images/mobile/logo-teal-small.png") center no-repeat;
-               &:hover
-               {
-                  background: url("../images/mobile/smileLogo-white-small.png") center no-repeat;
-               }
+         .headerContainer
+         {
+            //When the headerContainer is hovered, change the logo image
+            &:hover .mobile-logo {
+               background: url("../images/mobile/smileLogo-white-small.png") center no-repeat;
             }
          }
+
       }
    }
 }
